# Disk_based_vector

./: CMakeLists.txt  centroid_index  test.cpp  test2.cpp
demos/: CMakeLists.txt  Makefile  a.out  cmake_install.cmake  demo_fastscan_refine.cpp  demo_hnswflat.cpp  demo_ivf_pq.cpp  demo_ivf_pq_disk.cpp  demo_ivf_pq_fs_disk.cpp  demo_ivfflat_replicas.cpp  demo_ivfpq_10m.cpp  demo_ivfpq_common.cpp  demo_ivfpq_refine.cpp  demo_refine_disk.cpp  demo_sep_2.cpp  demo_sep_copy.cpp  demo_sep_ivfpqdisk.cpp  demo_sep_ivfpqdisk10m.cpp  demo_sep_ivfpqdisk10m_beam_search.cpp  demo_sep_ivfpqdisk2.cpp  demo_sep_ivfpqdisk2_beam_search.cpp  demo_sep_ivfpqdisk_chunked.cpp  demo_sep_ivfpqdisk_good_withcount.cpp  demo_sep_ivfpqdisk_sift1m.cpp  demo_sep_ivfpqfsdisk.cpp  demo_sep_ivfpqfsdiskk copy.cpp  demo_sep_ivfpqfsdiskk.cpp  demo_sep_refine_disk.cpp  test.cpp  unused_demo_ivf_pq_disk.cpp
faiss/: CMakeLists.txt  Index.cpp  Index.h  IndexDisk.cpp  IndexDisk.h  IndexFlat.cpp  IndexIVF.cpp  IndexIVF.h  IndexIVFDiskANN.cpp  IndexIVFFastScan.cpp  IndexIVFFastScan.h  IndexIVFFlat.cpp  IndexIVFPQ.cpp  IndexIVFPQDisk copy.cpp  IndexIVFPQDisk copy.h  IndexIVFPQDisk.cpp  IndexIVFPQDisk.h  IndexIVFPQDisk2.cpp  IndexIVFPQDisk2.h  IndexIVFPQDisk_IO_copy.cpp  IndexIVFPQDisk_IO_duplicate_copy.cpp  IndexIVFPQDisk_IO_duplicate_updated3.cpp  IndexIVFPQDisk_chunked.cpp  IndexIVFPQDisk_chunked.h  IndexIVFPQDisk_good_notime.cpp  IndexIVFPQFastScan.cpp  IndexIVFPQFastScanDisk.cpp  IndexIVFPQFastScanDisk.h  Makefile  cmake_install.cmake
faiss/impl/: AsyncIOExtension.h  DiskIOProcessor.h  DiskIOStructure.h  DiskInvertedListHolder.cpp  DiskInvertedListHolder.h  ProductQuantizer-inl.h  ProductQuantizer.cpp  index_read.cpp  index_write.cpp  simd_result_handlers.h
faiss/impl/code_distance/: code_distance-avx2.h  code_distance-generic.h  code_distance.h
faiss/invlists/: InvertedLists.cpp  InvertedLists.h
faiss/tsl/: sparse_growth_policy.h  sparse_hash.h
faiss/utils/: distances.cpp  distances.h  distances_simd.cpp
tutorial/cpp/: 1-Flat.cpp  2-IVFFlat.cpp  3-IVFPQ.cpp  4-GPU.cpp  5-Multiple-GPUs.cpp  6-HNSW.cpp  7-PQFastScan.cpp  CMakeLists.txt  Makefile  cmake_install.cmake
